# 3D-Object-Volume-Calculator

./: .gitignore  CMakeLists.txt  README.md  main.qml  qml.qrc
src/: main.cpp
src/app/: fileloading.cpp  fileloading.h  vtkwindow.cpp  vtkwindow.h
src/ui/: main.qml  main.qml.autosave  qml.qrc  welcome.qml
